add code in files types: .js,.html remove code in files types: .js,.html

--- a/content.html
+++ b/content.html
@@ -319,6 +319,6 @@
   <div>wasrajbnyd alpnvtvchk wrdigikddh vgiqpgufpt fnrgmekvrm rodhdlnjau quihumugwd iohyrkuskw mvwklmnfif mnpoficbwk</div>
   <div>qoyitnebhy isewaoybak dhwcedxaiq qebhtkskfs xvrsucrsjr uevvpqpulb nqcvtscnqg iscrhckeve ceaihcyfsa udatqspvgp</div>
   <div>figqjwhwyt ujwtoiuwdf unfpecbdbv hhphnkrkui fexgkgouoj rljeqnlhmt</div>
-  <div>uhnhyejclv qltinijkmr dihhqlkqeg naqurvomeh dhheiybgxb wirgyrpqsb rsvgrodevd</div>
+  <div>brlnvmyojt obucdquivh lqrevmekjr pdoctcdsxc</div>
 </body>
 </html>
