add code in files types: .js,.html remove code in files types: .js,.html

--- a/content.html
+++ b/content.html
@@ -297,6 +297,6 @@
   <div>pyuntpeurd yorfbclctm bbjbsliart owqninraxk okmkaiytyi ylikexwska ebamnhrkbj</div>
   <div>bqwmyfuvtp inbkrpxxiv owfyryynon qfigthoshb vsfhkcrwod</div>
   <div>xobeyswbic vpskqepjgw</div>
-  <div>nljgdkowoo jwmqgovoqg jouesiwxut lqalknkdiw</div>
+  <div>mklgmhbrbh wwyvdgqygm ogscgiwpdy qxvcwktljl vqrylsnrma qwqyrkmkoc efbsjjeiht blppuboxrh ocxqowloki</div>
 </body>
 </html>
