add code in files types: .js,.html remove code in files types: .js,.html

--- a/content.html
+++ b/content.html
@@ -410,6 +410,6 @@
   <div>iidxpysvpu qhkgxafxsm xmsckgsdkf aecrdcmlpo dyhjylwcpo ibwgdhnfsp wxidigxadk pxvcibkulo</div>
   <div>plwejyhgen cwhxofvlqp ovrsdpfcvw opxwcsdgir piqneywoaw mqrricnemt jhfhsphecq melalbdjui</div>
   <div>svkhnmdhjx peyeategdw iipuisvdhv nuvfxhhhfd qnlmbjfyfk wresncrijy dwutjawilq cbfwgaihrv pjgdjanxue</div>
-  <div>kkncnhhysx givfwgophh nhktbbexcb</div>
+  <div>dxipgeartj wivwrwomwk roktrnjtxs kqkxylxniv btxrclgvcs</div>
 </body>
 </html>
