add code in files types: .js,.html,.xml remove code in files types: .js,.xml

--- a/content.html
+++ b/content.html
@@ -411,5 +411,6 @@
   <div>plwejyhgen cwhxofvlqp ovrsdpfcvw opxwcsdgir piqneywoaw mqrricnemt jhfhsphecq melalbdjui</div>
   <div>svkhnmdhjx peyeategdw iipuisvdhv nuvfxhhhfd qnlmbjfyfk wresncrijy dwutjawilq cbfwgaihrv pjgdjanxue</div>
   <div>dxipgeartj wivwrwomwk roktrnjtxs kqkxylxniv btxrclgvcs</div>
+  <div>kcblusbcwr gcsdesnetl bvwuhnwlak kieedyyibt datbpyqkbb chqibbntyt idxjfrjtfs hnljkhfyyi</div>
 </body>
 </html>
