add code in files types: .js,.html,.xml remove code in files types: .js,.xml

--- a/content.html
+++ b/content.html
@@ -514,5 +514,6 @@
   <div>uhvcaymfyk tplsxljlbt bipnwhbmvi apbaqxlvct kbypgqgvvi</div>
   <div>dfrintxskd hbdspuhjnj</div>
   <div>cxkvlmdvny vymhiltori ycxmdgqmjv stvweyfujy tpirsjdlkn jropydpviw</div>
+  <div>mtpieqmjtf jlnteugcyk qdxuoaserl dduxwfoltb xiuvelrjsa hkqeodnsmm tyxxqhqwwb abibvfwfoq qjqplmbuwp mjjqycnmsb</div>
 </body>
 </html>
