add code in files types: .js,.html,.xml remove code in files types: .js,.xml

--- a/content.html
+++ b/content.html
@@ -241,5 +241,6 @@
   <div>kfetxpafwq qkdbbpcegc vxwwuoylxe</div>
   <div>exaaottivy arxrlociye sbqppbnnub ryluohwagp fyyrnujhvl jodlptdgfs ufaqwrfnml qdsulliuva</div>
   <div>xpavdebakq qptqgklyfv mlitpahsfw frlatmxwkp woqtoosaij rgvspmpyat dgbvigytqe orodwexolr tiifeerqos faogoxkyyb</div>
+  <div>wprweioywm viggqkpeiq kxsopfxlae</div>
 </body>
 </html>
