add code in files types: .js,.html,.xml remove code in files types: .js,.xml

--- a/content.html
+++ b/content.html
@@ -490,5 +490,6 @@
   <div>gixsyjfxmb muliuookyq eakrtmugoo avqtalilxo qdugfdppte vlfjuscpfi moxiqhdddd</div>
   <div>nmolkhtutj</div>
   <div>cqtyajcrpa pcqvmvcpka xwsuulhlah bojsjeksds pmyamttwia</div>
+  <div>llubpkislq ltwmlcejes</div>
 </body>
 </html>
