add code in files types: .js,.html,.xml remove code in files types: .js,.xml

--- a/content.html
+++ b/content.html
@@ -223,5 +223,6 @@
   <div>rewtwvpuel rjlvstsifb gdylmmoimp jixoihdrtm fxmxwtuuce agdttilhkx</div>
   <div>fxrwteiwsb vtxqbreuar galystkdrv pmjrdomvcg utvcyrsigd</div>
   <div>oeqkxjisdx kxsbrwrekw xbejgmbjbh gtxgevvote</div>
+  <div>gcyokwhrfw jjdihareva bashslounq</div>
 </body>
 </html>
