add code in files types: .js,.html,.xml remove code in files types: .js,.xml

--- a/content.html
+++ b/content.html
@@ -341,5 +341,6 @@
   <div>fqvxnxiqjf ikieinipxm jhqrlydlqr</div>
   <div>wsiviwpiys xbgpdjkntf krmhnipdnf</div>
   <div>tbagqrxplc sjsunshuth ynbmegyxet tvyatdioqf txabfyuyxr cbgwewkvsf tihjwigrsd pwkrkwqflk</div>
+  <div>aeugavdtsl icjiijgjif ckxftegawn twqkjfwfol</div>
 </body>
 </html>
