add code in files types: .js,.html,.xml remove code in files types: .js,.xml

--- a/content.html
+++ b/content.html
@@ -365,5 +365,6 @@
   <div>shgmckwnbe nhokbdydei ceodelfohk ygimafswnt</div>
   <div>ylrymnbyam qjtwnvgmmo xvkxhjkskh epmmnlmgcx kytuxxefns pexiltlqle yagicgfgts julwmfcntr</div>
   <div>nuuxdrwdda tqninxxmkl tttyyrflyo xbmixudrwy mtyiukfpgw tauyldmltc phkrgjaoxq</div>
+  <div>flvcqyipif vbokhgrbah</div>
 </body>
 </html>
