add code in files types: .js,.html,.xml remove code in files types: .js,.xml

--- a/content.html
+++ b/content.html
@@ -280,5 +280,6 @@
   <div>hewwyldvwr</div>
   <div>jgjagaycix</div>
   <div>eqretmtoty boqnajmbfr rdeogkahnv drtiwbcgyy</div>
+  <div>gdpoxalgkp bpmygyhmio dkecmvrewf</div>
 </body>
 </html>
