add code in files types: .js,.html,.xml remove code in files types: .js,.xml

--- a/content.html
+++ b/content.html
@@ -463,5 +463,6 @@
   <div>pukvsubuda kpltkstfhu ddnwrspaxm guxcshvfvm</div>
   <div>despdpttog</div>
   <div>etpmqmwpic ewkuawpeob xgacjlsclj gqucabwjyv hbklmwouyi eduvhliwcq otwlggbmlt uelmxgdbsu rognckfcpo lsnrwoywwb</div>
+  <div>dhxycapmfa yrmfyvouep wwyiikkbge tnxqhkoxoq</div>
 </body>
 </html>
