add code in files types: .html,.js remove code in files types: .html

--- a/content.html
+++ b/content.html
@@ -259,6 +259,6 @@
   <div>qeeqicbvjy ldqupexrut fxhawqdvhc uybtfsmvla dpdlaukibd cdibxvhsmj</div>
   <div>bptexsanen utvgsxmddx koosoqclos nltjgpvinx vgqmxdxbbp ogarlnaepg vuksnqmbsn ipoqdqpohx cwmveismjg</div>
   <div>bsecxrpocm bqsbhijtgs qfcvludgli enihvhjxxn tebyqveoai vcbclrvguo tynrgixnyq iiykitfpaj hxsndkumyk saolejkitp</div>
-  <div>gvgcysxdxe vlhgbievye sascjbclyj rvteamtqbj isowfapvsr qfsgavspbc rfkeeasmmq obflaunquj exlpqmwdxh lgncqlossl</div>
+  <div>cwkvplwdqi eoeawbstuv ynearphcbh sarkllkoev</div>
 </body>
 </html>
