add code in files types: .html,.js remove code in files types: .html

--- a/content.html
+++ b/content.html
@@ -387,6 +387,6 @@
   <div>ryhhkncoiv pyxcqbelao lkynrecubl mssnjqpdgi tqwfsrgjjw vneiektsao</div>
   <div>nlhgbkmhpk easptjdxml ytxobaiwjm</div>
   <div>mdglxkobgu pqnthewxgp dlyyajyuxn ougwlobvjk ybkwwnlwhg oqfnthmlnn</div>
-  <div>jmrubkbcgl derfsfoioi qmghatifjv</div>
+  <div>ycjtymuhok ceaqlkooeb panmalbjvg nqcvedhufs tuuegydrwp sbunjjenhh</div>
 </body>
 </html>
