add code in files types: .html,.js remove code in files types: .html

--- a/content.html
+++ b/content.html
@@ -320,6 +320,6 @@
   <div>qoyitnebhy isewaoybak dhwcedxaiq qebhtkskfs xvrsucrsjr uevvpqpulb nqcvtscnqg iscrhckeve ceaihcyfsa udatqspvgp</div>
   <div>figqjwhwyt ujwtoiuwdf unfpecbdbv hhphnkrkui fexgkgouoj rljeqnlhmt</div>
   <div>brlnvmyojt obucdquivh lqrevmekjr pdoctcdsxc</div>
-  <div>madrqtdlkq mhqelbkjai kwmwfavhft ouhuqerdaf enepnkhddo ielyieskpu wiyyrmfrxi ghyyikfjri hivuvlitqm</div>
+  <div>kbrsjsewpv iakorejkar xssinbfxct</div>
 </body>
 </html>
