add code in files types: .html,.js remove code in files types: .html

--- a/content.html
+++ b/content.html
@@ -298,6 +298,6 @@
   <div>bqwmyfuvtp inbkrpxxiv owfyryynon qfigthoshb vsfhkcrwod</div>
   <div>xobeyswbic vpskqepjgw</div>
   <div>mklgmhbrbh wwyvdgqygm ogscgiwpdy qxvcwktljl vqrylsnrma qwqyrkmkoc efbsjjeiht blppuboxrh ocxqowloki</div>
-  <div>imgtjfkrng hcqhhrdudw rnjheoumcq pxjnqbkqnx wbbewtejkd lhpxxerwsd dtqafiqbep rudqwdbawt csaoxgktnf</div>
+  <div>xxygltkfgr</div>
 </body>
 </html>
