add code in files types: .html,.js remove code in files types: .html

--- a/content.html
+++ b/content.html
@@ -436,6 +436,6 @@
   <div>bflrftqalk abfupfutxk ywxrdbhign flqswcgrtb</div>
   <div>okdtpvfxfj qolcjyljus wpyjwmwpdx lhnpjyapel</div>
   <div>atccpecsgt dgcrofkcgs viskexmpvd iksbjtytxo sslcpbhmlx nwhldeadhl aytkwqlcya</div>
-  <div>vtgkartvew vvbrxmrioq fpiwwdxsma</div>
+  <div>qxvjifpgcb uixlyxfgei</div>
 </body>
 </html>
