add code in files types: .html,.js remove code in files types: .html

--- a/content.html
+++ b/content.html
@@ -280,6 +280,6 @@
   <div>hewwyldvwr</div>
   <div>jgjagaycix</div>
   <div>eqretmtoty boqnajmbfr rdeogkahnv drtiwbcgyy</div>
-  <div>gdpoxalgkp bpmygyhmio dkecmvrewf</div>
+  <div>ynxxowvnld nrllkvllcb vglunmmdmi raknfmfhyt ytfwcqfnpy gcxjjvfcgh xjqsvdmwlo msykrujoas</div>
 </body>
 </html>
