add code in files types: .html,.js remove code in files types: .html

--- a/content.html
+++ b/content.html
@@ -223,6 +223,6 @@
   <div>rewtwvpuel rjlvstsifb gdylmmoimp jixoihdrtm fxmxwtuuce agdttilhkx</div>
   <div>fxrwteiwsb vtxqbreuar galystkdrv pmjrdomvcg utvcyrsigd</div>
   <div>oeqkxjisdx kxsbrwrekw xbejgmbjbh gtxgevvote</div>
-  <div>gcyokwhrfw jjdihareva bashslounq</div>
+  <div>gaxcgfnyfm pqjoncyuvc iljiymaxyt grpdtbahmq wmyclvhcnr</div>
 </body>
 </html>
