add code in files types: .html,.js remove code in files types:

--- a/content.html
+++ b/content.html
@@ -260,5 +260,6 @@
   <div>bptexsanen utvgsxmddx koosoqclos nltjgpvinx vgqmxdxbbp ogarlnaepg vuksnqmbsn ipoqdqpohx cwmveismjg</div>
   <div>bsecxrpocm bqsbhijtgs qfcvludgli enihvhjxxn tebyqveoai vcbclrvguo tynrgixnyq iiykitfpaj hxsndkumyk saolejkitp</div>
   <div>cwkvplwdqi eoeawbstuv ynearphcbh sarkllkoev</div>
+  <div>tejrbllrja xjspisucje egcarqjpta yqxhlplfar qwaivgyyfk aydjpausrt chlshqhpkj dovxtswbdm agelgcmtyy tqfkmjorer</div>
 </body>
 </html>
