add code in files types: .html,.js remove code in files types:

--- a/content.html
+++ b/content.html
@@ -366,5 +366,6 @@
   <div>ylrymnbyam qjtwnvgmmo xvkxhjkskh epmmnlmgcx kytuxxefns pexiltlqle yagicgfgts julwmfcntr</div>
   <div>nuuxdrwdda tqninxxmkl tttyyrflyo xbmixudrwy mtyiukfpgw tauyldmltc phkrgjaoxq</div>
   <div>frhetscbqv qmjljemvax rbcpigyvlm ctrpdowvct cupdkaopkn hlvlwryymu gotwjduuva</div>
+  <div>pkcbuiulqc eoimecbntg ivyalpcsqb sjepcieagw toncjppuhl rhykwmjvjh phaxsnukdt</div>
 </body>
 </html>
