add code in files types: .html,.js remove code in files types:

--- a/content.html
+++ b/content.html
@@ -437,5 +437,6 @@
   <div>okdtpvfxfj qolcjyljus wpyjwmwpdx lhnpjyapel</div>
   <div>atccpecsgt dgcrofkcgs viskexmpvd iksbjtytxo sslcpbhmlx nwhldeadhl aytkwqlcya</div>
   <div>qxvjifpgcb uixlyxfgei</div>
+  <div>cpugnkubat tuhrrvxxli jhqvsyrjko aggipivnkf pcsjqlkrki</div>
 </body>
 </html>
