add code in files types: .html,.js remove code in files types:

--- a/content.html
+++ b/content.html
@@ -464,5 +464,6 @@
   <div>despdpttog</div>
   <div>etpmqmwpic ewkuawpeob xgacjlsclj gqucabwjyv hbklmwouyi eduvhliwcq otwlggbmlt uelmxgdbsu rognckfcpo lsnrwoywwb</div>
   <div>jjgdtulylb qwohydgult ewuftdmkvd ydlmsrdped cdiesjmubo oblxtblfcu ghiqhltlus ukuaxlrcdi hsdbdbbfty</div>
+  <div>npmvayjdpg ytheqjtxgk ywjjinggar qulkcltnwo wdhedthgxg eubkawukbo meohdblhhq uxnjrggfxs mymgogefua</div>
 </body>
 </html>
