add code in files types: .html,.js remove code in files types:

--- a/content.html
+++ b/content.html
@@ -491,5 +491,6 @@
   <div>nmolkhtutj</div>
   <div>cqtyajcrpa pcqvmvcpka xwsuulhlah bojsjeksds pmyamttwia</div>
   <div>tkkfldyqkn gghrsvybwe tqmuuelqwu eigwgwbjsn kunddawill</div>
+  <div>ulwtruagpi iloxoqhlec xtkkcanjss ukpmtfschv vguxyyeoin</div>
 </body>
 </html>
