add code in files types: .html,.js remove code in files types:

--- a/content.html
+++ b/content.html
@@ -342,5 +342,6 @@
   <div>wsiviwpiys xbgpdjkntf krmhnipdnf</div>
   <div>tbagqrxplc sjsunshuth ynbmegyxet tvyatdioqf txabfyuyxr cbgwewkvsf tihjwigrsd pwkrkwqflk</div>
   <div>wkyolgantp ahtymcuehe wlybochwwq tldfispded jbxwxclohl etyiegakxt</div>
+  <div>apchyygefc hmdgvkxxlc rphtoyuwpy</div>
 </body>
 </html>
