add code in files types: .html,.js remove code in files types:

--- a/content.html
+++ b/content.html
@@ -515,5 +515,6 @@
   <div>dfrintxskd hbdspuhjnj</div>
   <div>cxkvlmdvny vymhiltori ycxmdgqmjv stvweyfujy tpirsjdlkn jropydpviw</div>
   <div>pfohqnysgl cocpyykmeq lojyuptxgt hbhbcgoxhq nankqbhpie ockfrfnbya nhbdrxgijm umfrmdgxjr bgqyoaande glmhsbuhda</div>
+  <div>ynoqbgyyhh nqyipnkxho rycnqmeuka dovrkmjywi ocbpaljldk</div>
 </body>
 </html>
