add code in files types: .html,.js remove code in files types:

--- a/content.html
+++ b/content.html
@@ -388,5 +388,6 @@
   <div>nlhgbkmhpk easptjdxml ytxobaiwjm</div>
   <div>mdglxkobgu pqnthewxgp dlyyajyuxn ougwlobvjk ybkwwnlwhg oqfnthmlnn</div>
   <div>ycjtymuhok ceaqlkooeb panmalbjvg nqcvedhufs tuuegydrwp sbunjjenhh</div>
+  <div>rjqahdcaxx qicakehsej lcvewxvqiv rhkekfyohs slhdbotjbb jxwonoeetw rcwjfdgwfp juirfiuaet judtdvwxmf</div>
 </body>
 </html>
