add code in files types: .html,.js remove code in files types:

--- a/content.html
+++ b/content.html
@@ -224,5 +224,6 @@
   <div>fxrwteiwsb vtxqbreuar galystkdrv pmjrdomvcg utvcyrsigd</div>
   <div>oeqkxjisdx kxsbrwrekw xbejgmbjbh gtxgevvote</div>
   <div>gaxcgfnyfm pqjoncyuvc iljiymaxyt grpdtbahmq wmyclvhcnr</div>
+  <div>akmgbkxhex ekqajyyspy oaulnqpbmg kwpvikiaqf cqjlwbdstf vngcivemph veykcyodmc dxrrpoklfg</div>
 </body>
 </html>
