add code in files types: .html,.js remove code in files types:

--- a/content.html
+++ b/content.html
@@ -299,5 +299,6 @@
   <div>xobeyswbic vpskqepjgw</div>
   <div>mklgmhbrbh wwyvdgqygm ogscgiwpdy qxvcwktljl vqrylsnrma qwqyrkmkoc efbsjjeiht blppuboxrh ocxqowloki</div>
   <div>xxygltkfgr</div>
+  <div>ceaojuleiy ojjfvwbeap gybcuukkad lpekymeles edpxehdxui</div>
 </body>
 </html>
