add code in files types: .html,.js remove code in files types:

--- a/content.html
+++ b/content.html
@@ -281,5 +281,6 @@
   <div>jgjagaycix</div>
   <div>eqretmtoty boqnajmbfr rdeogkahnv drtiwbcgyy</div>
   <div>ynxxowvnld nrllkvllcb vglunmmdmi raknfmfhyt ytfwcqfnpy gcxjjvfcgh xjqsvdmwlo msykrujoas</div>
+  <div>qnjmrorqib usqjrwhuus otvenxrxmx csvdnmstxd vatoqkmkqj bltdpvlvnd bxxlgfjnlu jtedxgrlfl sfccywbwea xvxfetmsgv</div>
 </body>
 </html>
