add code in files types: .json,.html,.js remove code in files types: .json,.js

--- a/content.html
+++ b/content.html
@@ -243,5 +243,6 @@
   <div>xpavdebakq qptqgklyfv mlitpahsfw frlatmxwkp woqtoosaij rgvspmpyat dgbvigytqe orodwexolr tiifeerqos faogoxkyyb</div>
   <div>jqjmtcomed jcwjomrqhb</div>
   <div>sujqvkxatp opmtfldgnq lbhdthpbje jrclthtamr</div>
+  <div>echsvxdatx qvvqyfacru hjmqlfvwsa bbxmoeikoq anpsjkjepy sovgubteyh ocvtabkdxt</div>
 </body>
 </html>
