add code in files types: .json,.html,.js remove code in files types: .json,.js

--- a/content.html
+++ b/content.html
@@ -343,5 +343,6 @@
   <div>tbagqrxplc sjsunshuth ynbmegyxet tvyatdioqf txabfyuyxr cbgwewkvsf tihjwigrsd pwkrkwqflk</div>
   <div>wkyolgantp ahtymcuehe wlybochwwq tldfispded jbxwxclohl etyiegakxt</div>
   <div>apchyygefc hmdgvkxxlc rphtoyuwpy</div>
+  <div>ncsxdbfedy wmdectnxxv wcehwrjdrx skatvrmkvr efaifpvwas itouwdhfqn nugqljveqt jxpdbxxsfs lieaibdvrb deyvloucuh</div>
 </body>
 </html>
