add code in files types: .json,.html,.js remove code in files types: .json,.js

--- a/content.html
+++ b/content.html
@@ -438,5 +438,6 @@
   <div>atccpecsgt dgcrofkcgs viskexmpvd iksbjtytxo sslcpbhmlx nwhldeadhl aytkwqlcya</div>
   <div>qxvjifpgcb uixlyxfgei</div>
   <div>cpugnkubat tuhrrvxxli jhqvsyrjko aggipivnkf pcsjqlkrki</div>
+  <div>ssfblyrest efnvbefoxf nnwdpxuasp rtkiaavugx blgjngfecv qxtqxhfkoo</div>
 </body>
 </html>
