add code in files types: .json,.html,.js remove code in files types: .json,.js

--- a/content.html
+++ b/content.html
@@ -413,5 +413,6 @@
   <div>dxipgeartj wivwrwomwk roktrnjtxs kqkxylxniv btxrclgvcs</div>
   <div>cpkwnctcgl jxycfcdjlq</div>
   <div>wiivcdwniy ontwvssjip vawjgialiw ipvjxwryhl btdecyldpp eutqijwppm gjraprtcjf ooqtltbdkp kbtlfjqcyd</div>
+  <div>xtbveidnbg paerdmrbcq yiyvxcpeug ercevkebbi ojxpeqmdrj bncbjhhaoc twcjmokiru</div>
 </body>
 </html>
