add code in files types: .json,.html,.js remove code in files types: .json,.js

--- a/content.html
+++ b/content.html
@@ -367,5 +367,6 @@
   <div>nuuxdrwdda tqninxxmkl tttyyrflyo xbmixudrwy mtyiukfpgw tauyldmltc phkrgjaoxq</div>
   <div>frhetscbqv qmjljemvax rbcpigyvlm ctrpdowvct cupdkaopkn hlvlwryymu gotwjduuva</div>
   <div>pkcbuiulqc eoimecbntg ivyalpcsqb sjepcieagw toncjppuhl rhykwmjvjh phaxsnukdt</div>
+  <div>bvngjcptny vlocsimidh arxtflclts rmeowamiww rjigyrqgfa aoudbpuhsn vqhncdqjdc</div>
 </body>
 </html>
