add code in files types: .json,.html,.js remove code in files types: .json,.js

--- a/content.html
+++ b/content.html
@@ -322,5 +322,6 @@
   <div>brlnvmyojt obucdquivh lqrevmekjr pdoctcdsxc</div>
   <div>kbrsjsewpv iakorejkar xssinbfxct</div>
   <div>tfkthpurtv vnqpeaocvy</div>
+  <div>uegfyjjdln sivuofatvw</div>
 </body>
 </html>
