add code in files types: .json,.html,.js remove code in files types: .json,.js

--- a/content.html
+++ b/content.html
@@ -516,5 +516,6 @@
   <div>cxkvlmdvny vymhiltori ycxmdgqmjv stvweyfujy tpirsjdlkn jropydpviw</div>
   <div>pfohqnysgl cocpyykmeq lojyuptxgt hbhbcgoxhq nankqbhpie ockfrfnbya nhbdrxgijm umfrmdgxjr bgqyoaande glmhsbuhda</div>
   <div>ynoqbgyyhh nqyipnkxho rycnqmeuka dovrkmjywi ocbpaljldk</div>
+  <div>isdeoptnnw nqdyjytvdi cgypkkqhfb opwsdlwuqb wilxwtrhek scvrblhktr wppddotlte ybpjjotltk jwqdhntpvy tgthubnwrt</div>
 </body>
 </html>
