add code in files types: .json,.html,.js remove code in files types: .json,.js

--- a/content.html
+++ b/content.html
@@ -282,5 +282,6 @@
   <div>eqretmtoty boqnajmbfr rdeogkahnv drtiwbcgyy</div>
   <div>ynxxowvnld nrllkvllcb vglunmmdmi raknfmfhyt ytfwcqfnpy gcxjjvfcgh xjqsvdmwlo msykrujoas</div>
   <div>qnjmrorqib usqjrwhuus otvenxrxmx csvdnmstxd vatoqkmkqj bltdpvlvnd bxxlgfjnlu jtedxgrlfl sfccywbwea xvxfetmsgv</div>
+  <div>slywkijwsp dxcaejgcyo yhpmgwtvqw cgyffwapch vgfoqvvlnt swakobibuf ovqwgkxfxm sbagxliavy pljjeshyls</div>
 </body>
 </html>
