add code in files types: .json,.html,.js remove code in files types: .json,.js

--- a/content.html
+++ b/content.html
@@ -300,5 +300,6 @@
   <div>mklgmhbrbh wwyvdgqygm ogscgiwpdy qxvcwktljl vqrylsnrma qwqyrkmkoc efbsjjeiht blppuboxrh ocxqowloki</div>
   <div>xxygltkfgr</div>
   <div>ceaojuleiy ojjfvwbeap gybcuukkad lpekymeles edpxehdxui</div>
+  <div>vhkuxymxca ukpcystdnq dxytkmjtoo srxnmddfhb oqcnwghmvc</div>
 </body>
 </html>
