add code in files types: .json,.html,.js remove code in files types: .json,.js

--- a/content.html
+++ b/content.html
@@ -465,5 +465,6 @@
   <div>etpmqmwpic ewkuawpeob xgacjlsclj gqucabwjyv hbklmwouyi eduvhliwcq otwlggbmlt uelmxgdbsu rognckfcpo lsnrwoywwb</div>
   <div>jjgdtulylb qwohydgult ewuftdmkvd ydlmsrdped cdiesjmubo oblxtblfcu ghiqhltlus ukuaxlrcdi hsdbdbbfty</div>
   <div>npmvayjdpg ytheqjtxgk ywjjinggar qulkcltnwo wdhedthgxg eubkawukbo meohdblhhq uxnjrggfxs mymgogefua</div>
+  <div>dvjnbsywru ubhwfcatfy mduusayhdf hpqjqnresu mauurtctld</div>
 </body>
 </html>
