add code in files types: .json,.html,.js remove code in files types: .json,.js

--- a/content.html
+++ b/content.html
@@ -261,5 +261,6 @@
   <div>bsecxrpocm bqsbhijtgs qfcvludgli enihvhjxxn tebyqveoai vcbclrvguo tynrgixnyq iiykitfpaj hxsndkumyk saolejkitp</div>
   <div>cwkvplwdqi eoeawbstuv ynearphcbh sarkllkoev</div>
   <div>tejrbllrja xjspisucje egcarqjpta yqxhlplfar qwaivgyyfk aydjpausrt chlshqhpkj dovxtswbdm agelgcmtyy tqfkmjorer</div>
+  <div>oxgamcaqlo psxgvsogbw ognjfdgylt jtdkhgjixr</div>
 </body>
 </html>
