add code in files types: .html,.js remove code in files types:

--- a/content.html
+++ b/content.html
@@ -301,5 +301,6 @@
   <div>xxygltkfgr</div>
   <div>ceaojuleiy ojjfvwbeap gybcuukkad lpekymeles edpxehdxui</div>
   <div>vhkuxymxca ukpcystdnq dxytkmjtoo srxnmddfhb oqcnwghmvc</div>
+  <div>gwuomvkpgq mktnyxwxts qnfnwloguu eldybegkbw ixstucqxht kuhgsfleuy spnwpmmgdq bexjsrrgio nxslluchrg ffgljpaewa</div>
 </body>
 </html>
