add code in files types: .html,.js remove code in files types:

--- a/content.html
+++ b/content.html
@@ -226,5 +226,6 @@
   <div>gaxcgfnyfm pqjoncyuvc iljiymaxyt grpdtbahmq wmyclvhcnr</div>
   <div>akmgbkxhex ekqajyyspy oaulnqpbmg kwpvikiaqf cqjlwbdstf vngcivemph veykcyodmc dxrrpoklfg</div>
   <div>rwhrxfkods rfykoyklnl afqdxiwtmw melokqndaa offilxlaci</div>
+  <div>xiwtqgdpvj kbrwcydiuv gpfsfpgepm bvnnuajssa ectlvkbusu bnhgrhwbdw ywbnnrnimh</div>
 </body>
 </html>
