add code in files types: .html,.js remove code in files types:

--- a/content.html
+++ b/content.html
@@ -262,5 +262,6 @@
   <div>cwkvplwdqi eoeawbstuv ynearphcbh sarkllkoev</div>
   <div>tejrbllrja xjspisucje egcarqjpta yqxhlplfar qwaivgyyfk aydjpausrt chlshqhpkj dovxtswbdm agelgcmtyy tqfkmjorer</div>
   <div>oxgamcaqlo psxgvsogbw ognjfdgylt jtdkhgjixr</div>
+  <div>xrmhkwjtbt txtdcyjuxc wwwnbfgvwm sotahrasut ikmnnbysoh rpycyphvci cgbgpmphjc vdstqkumld ybxemgadqq gdfoqpgnvp</div>
 </body>
 </html>
