add code in files types: .html,.js remove code in files types:

--- a/content.html
+++ b/content.html
@@ -368,5 +368,6 @@
   <div>frhetscbqv qmjljemvax rbcpigyvlm ctrpdowvct cupdkaopkn hlvlwryymu gotwjduuva</div>
   <div>pkcbuiulqc eoimecbntg ivyalpcsqb sjepcieagw toncjppuhl rhykwmjvjh phaxsnukdt</div>
   <div>bvngjcptny vlocsimidh arxtflclts rmeowamiww rjigyrqgfa aoudbpuhsn vqhncdqjdc</div>
+  <div>wuusdosucu usqcsxodxg erkrimejxc jtugjneddg fkdnlibvqf wawgbpuaie bjyecmmfje</div>
 </body>
 </html>
