add code in files types: .html,.js remove code in files types:

--- a/content.html
+++ b/content.html
@@ -439,5 +439,6 @@
   <div>qxvjifpgcb uixlyxfgei</div>
   <div>cpugnkubat tuhrrvxxli jhqvsyrjko aggipivnkf pcsjqlkrki</div>
   <div>ssfblyrest efnvbefoxf nnwdpxuasp rtkiaavugx blgjngfecv qxtqxhfkoo</div>
+  <div>hbdorvipud pjcvxgifih otqflkdknt</div>
 </body>
 </html>
