add code in files types: .html,.js remove code in files types:

--- a/content.html
+++ b/content.html
@@ -344,5 +344,6 @@
   <div>wkyolgantp ahtymcuehe wlybochwwq tldfispded jbxwxclohl etyiegakxt</div>
   <div>apchyygefc hmdgvkxxlc rphtoyuwpy</div>
   <div>ncsxdbfedy wmdectnxxv wcehwrjdrx skatvrmkvr efaifpvwas itouwdhfqn nugqljveqt jxpdbxxsfs lieaibdvrb deyvloucuh</div>
+  <div>qllqisfckv rbhqkepdoa xofxcptqmt tsoenwxbuw jccwwouldv varhhdlwdb ojgiwwbvsy xkfyldxfkj tundpcymir mkdvvrvwig</div>
 </body>
 </html>
