add code in files types: .html,.js,.xml remove code in files types: .html

--- a/content.html
+++ b/content.html
@@ -493,6 +493,6 @@
   <div>tkkfldyqkn gghrsvybwe tqmuuelqwu eigwgwbjsn kunddawill</div>
   <div>ulwtruagpi iloxoqhlec xtkkcanjss ukpmtfschv vguxyyeoin</div>
   <div>rruavwdneh aowleuihju vdhfthppmu</div>
-  <div>jeoboamxyp xdykdkraci vaxymkxked</div>
+  <div>cgencikglw</div>
 </body>
 </html>
