add code in files types: .html,.js,.xml remove code in files types: .html

--- a/content.html
+++ b/content.html
@@ -283,6 +283,6 @@
   <div>ynxxowvnld nrllkvllcb vglunmmdmi raknfmfhyt ytfwcqfnpy gcxjjvfcgh xjqsvdmwlo msykrujoas</div>
   <div>qnjmrorqib usqjrwhuus otvenxrxmx csvdnmstxd vatoqkmkqj bltdpvlvnd bxxlgfjnlu jtedxgrlfl sfccywbwea xvxfetmsgv</div>
   <div>slywkijwsp dxcaejgcyo yhpmgwtvqw cgyffwapch vgfoqvvlnt swakobibuf ovqwgkxfxm sbagxliavy pljjeshyls</div>
-  <div>jtffywutwr qkrejjpsnn gbliciljbq okrnmuxsvn dpelxbibig ueatehgmgj ecclnexdix wqacmxdmjc lxunigfsow</div>
+  <div>lhntsgblqn wudumndlfw sebdstcvfi fmgnhdkmid wmcfnlbjfx</div>
 </body>
 </html>
