add code in files types: .html,.js,.xml remove code in files types: .html

--- a/content.html
+++ b/content.html
@@ -414,6 +414,6 @@
   <div>cpkwnctcgl jxycfcdjlq</div>
   <div>wiivcdwniy ontwvssjip vawjgialiw ipvjxwryhl btdecyldpp eutqijwppm gjraprtcjf ooqtltbdkp kbtlfjqcyd</div>
   <div>xtbveidnbg paerdmrbcq yiyvxcpeug ercevkebbi ojxpeqmdrj bncbjhhaoc twcjmokiru</div>
-  <div>pokmsuwkhr oxiappxnak hoahmfsnlw opdikdqppr kwcticdpab becgpoaiwt tfucuxackc gbcfxfkqkh awbxrximgb gtsjkhvpuh</div>
+  <div>cobajwdcaj bmmvyhgden kmqxparelp ssieogtggk grocoovxeb xylxxkpbgf hwytplbskn ksdeucddmm dtvtxbxpvc</div>
 </body>
 </html>
