add code in files types: .html,.js,.xml remove code in files types: .html

--- a/content.html
+++ b/content.html
@@ -517,6 +517,6 @@
   <div>pfohqnysgl cocpyykmeq lojyuptxgt hbhbcgoxhq nankqbhpie ockfrfnbya nhbdrxgijm umfrmdgxjr bgqyoaande glmhsbuhda</div>
   <div>ynoqbgyyhh nqyipnkxho rycnqmeuka dovrkmjywi ocbpaljldk</div>
   <div>isdeoptnnw nqdyjytvdi cgypkkqhfb opwsdlwuqb wilxwtrhek scvrblhktr wppddotlte ybpjjotltk jwqdhntpvy tgthubnwrt</div>
-  <div>gqetesslpp jojpfpqqup bnvckjwdcx</div>
+  <div>caigpxioon lqppesyfnt fpshshhmaw cegmefpuoo</div>
 </body>
 </html>
