add code in files types: .html,.js,.xml remove code in files types: .html

--- a/content.html
+++ b/content.html
@@ -323,6 +323,6 @@
   <div>kbrsjsewpv iakorejkar xssinbfxct</div>
   <div>tfkthpurtv vnqpeaocvy</div>
   <div>uegfyjjdln sivuofatvw</div>
-  <div>xsuevuvbho qqbikuropu nmdshnjtso heptdbeilj gieqoioulr</div>
+  <div>deshkownkq fjjlyxbtyl jmxjegcolw vuhsrjxrsi uuxakhocda</div>
 </body>
 </html>
