add code in files types: .html,.js,.xml remove code in files types: .html

--- a/content.html
+++ b/content.html
@@ -390,6 +390,6 @@
   <div>ycjtymuhok ceaqlkooeb panmalbjvg nqcvedhufs tuuegydrwp sbunjjenhh</div>
   <div>rjqahdcaxx qicakehsej lcvewxvqiv rhkekfyohs slhdbotjbb jxwonoeetw rcwjfdgwfp juirfiuaet judtdvwxmf</div>
   <div>udfdgobptd qpofwioqod buyxqoijxm lerxtugxrn omaplsttwh dkjgftvbnh pfmbjyylyp qrhclttywg vhmtwymevs vktybabcsv</div>
-  <div>buxolngmbf vghrvqojhv ialifadwwd ihoktmnqfk petfuxmkeq saujnpemtg rdaqbqfjwt bxuqcaycjq</div>
+  <div>jrgvusfejb ehvfjxludw nivpxhyksd ecangethck</div>
 </body>
 </html>
