add code in files types: .html,.js,.xml remove code in files types: .html

--- a/content.html
+++ b/content.html
@@ -466,6 +466,6 @@
   <div>jjgdtulylb qwohydgult ewuftdmkvd ydlmsrdped cdiesjmubo oblxtblfcu ghiqhltlus ukuaxlrcdi hsdbdbbfty</div>
   <div>npmvayjdpg ytheqjtxgk ywjjinggar qulkcltnwo wdhedthgxg eubkawukbo meohdblhhq uxnjrggfxs mymgogefua</div>
   <div>dvjnbsywru ubhwfcatfy mduusayhdf hpqjqnresu mauurtctld</div>
-  <div>lwpaevihbn qebuvjyaax ukyuiadcke drluuswwef dbqrkgipxh</div>
+  <div>hbfljufeoy mfyjlvcgmi</div>
 </body>
 </html>
