add code in files types: .html,.js remove code in files types: .js

--- a/content.html
+++ b/content.html
@@ -518,5 +518,6 @@
   <div>ynoqbgyyhh nqyipnkxho rycnqmeuka dovrkmjywi ocbpaljldk</div>
   <div>isdeoptnnw nqdyjytvdi cgypkkqhfb opwsdlwuqb wilxwtrhek scvrblhktr wppddotlte ybpjjotltk jwqdhntpvy tgthubnwrt</div>
   <div>caigpxioon lqppesyfnt fpshshhmaw cegmefpuoo</div>
+  <div>stpjiyyvoa toojnhnhde qpdonrmbkw hwbeivkxdw</div>
 </body>
 </html>
