add code in files types: .html,.js remove code in files types: .js

--- a/content.html
+++ b/content.html
@@ -494,5 +494,6 @@
   <div>ulwtruagpi iloxoqhlec xtkkcanjss ukpmtfschv vguxyyeoin</div>
   <div>rruavwdneh aowleuihju vdhfthppmu</div>
   <div>cgencikglw</div>
+  <div>yjdjshpohs cgylseddul vgkitdhatp knteyfwybk apcsiqdueh</div>
 </body>
 </html>
