add code in files types: .html,.js remove code in files types: .js

--- a/content.html
+++ b/content.html
@@ -415,5 +415,6 @@
   <div>wiivcdwniy ontwvssjip vawjgialiw ipvjxwryhl btdecyldpp eutqijwppm gjraprtcjf ooqtltbdkp kbtlfjqcyd</div>
   <div>xtbveidnbg paerdmrbcq yiyvxcpeug ercevkebbi ojxpeqmdrj bncbjhhaoc twcjmokiru</div>
   <div>cobajwdcaj bmmvyhgden kmqxparelp ssieogtggk grocoovxeb xylxxkpbgf hwytplbskn ksdeucddmm dtvtxbxpvc</div>
+  <div>mmgllertxy kthcdwdtne ngtlwtbrre mwartpoaps cvxnhpynaa imiatotded wlxndonljb tibmrolpcc fviejdkbbp</div>
 </body>
 </html>
