add code in files types: .html,.js remove code in files types: .js

--- a/content.html
+++ b/content.html
@@ -245,5 +245,6 @@
   <div>sujqvkxatp opmtfldgnq lbhdthpbje jrclthtamr</div>
   <div>echsvxdatx qvvqyfacru hjmqlfvwsa bbxmoeikoq anpsjkjepy sovgubteyh ocvtabkdxt</div>
   <div>eptxacuibb aayebnnimd drjpujxltt hyxoxrobgg npwjacpdss xhhxpggdhc wxrjusemmy iugrwuxndv xqespjahgs dvbmtfjyhd</div>
+  <div>iyqhpjwckd nhgetiidjr byfadxgocu</div>
 </body>
 </html>
