add code in files types: .html,.js remove code in files types: .js

--- a/content.html
+++ b/content.html
@@ -440,5 +440,6 @@
   <div>cpugnkubat tuhrrvxxli jhqvsyrjko aggipivnkf pcsjqlkrki</div>
   <div>ssfblyrest efnvbefoxf nnwdpxuasp rtkiaavugx blgjngfecv qxtqxhfkoo</div>
   <div>oivqyyqgfw pdwsoehfog suxitencpy quvtklbwse kydstvpwhu cuhbogtqwm lxglpcjiif acpiahciyd</div>
+  <div>hvavmuuchj tmxwqemwfn jauofuqenf nteqpnwfdn vvlcjqhyco guqmwbvorl vcagclemka eqikdbtnoc</div>
 </body>
 </html>
