add code in files types: .html,.js remove code in files types: .js

--- a/content.html
+++ b/content.html
@@ -467,5 +467,6 @@
   <div>npmvayjdpg ytheqjtxgk ywjjinggar qulkcltnwo wdhedthgxg eubkawukbo meohdblhhq uxnjrggfxs mymgogefua</div>
   <div>dvjnbsywru ubhwfcatfy mduusayhdf hpqjqnresu mauurtctld</div>
   <div>hbfljufeoy mfyjlvcgmi</div>
+  <div>rukcabxtdp</div>
 </body>
 </html>
