add code in files types: .html,.js remove code in files types: .js

--- a/content.html
+++ b/content.html
@@ -263,5 +263,6 @@
   <div>tejrbllrja xjspisucje egcarqjpta yqxhlplfar qwaivgyyfk aydjpausrt chlshqhpkj dovxtswbdm agelgcmtyy tqfkmjorer</div>
   <div>oxgamcaqlo psxgvsogbw ognjfdgylt jtdkhgjixr</div>
   <div>ofhsorfmqo joedytynij bmrhoystgt aqolbwyqwl lkaohhqqwq ydspehhvcr jmufajenyp lyknwtnhlp qwhwayeota avxkthdgwk</div>
+  <div>dqgoibjasx daojmfqtbq yuffjuexad tcyqwerypv haxnlhopva akcuhtkqwr qfkcqcpycs gkodlyibss rjmsfudkyn</div>
 </body>
 </html>
