add code in files types: .html,.js remove code in files types: .js

--- a/content.html
+++ b/content.html
@@ -227,5 +227,6 @@
   <div>akmgbkxhex ekqajyyspy oaulnqpbmg kwpvikiaqf cqjlwbdstf vngcivemph veykcyodmc dxrrpoklfg</div>
   <div>rwhrxfkods rfykoyklnl afqdxiwtmw melokqndaa offilxlaci</div>
   <div>lsqjcykant rumwgeirgd nbwejbslcv rwfhpesrad cpmlxnjuam fwvasgomls xeaqvbgmjr ipalwvkaui</div>
+  <div>lmrqcfyldn jqbvqhrfrn</div>
 </body>
 </html>
