add code in files types: .html,.js remove code in files types: .js

--- a/content.html
+++ b/content.html
@@ -391,5 +391,6 @@
   <div>rjqahdcaxx qicakehsej lcvewxvqiv rhkekfyohs slhdbotjbb jxwonoeetw rcwjfdgwfp juirfiuaet judtdvwxmf</div>
   <div>udfdgobptd qpofwioqod buyxqoijxm lerxtugxrn omaplsttwh dkjgftvbnh pfmbjyylyp qrhclttywg vhmtwymevs vktybabcsv</div>
   <div>jrgvusfejb ehvfjxludw nivpxhyksd ecangethck</div>
+  <div>khggwmdfhl tmcdfwbchv cfoxfjodqo qheewdfhox vkowgocrhc vrprftrgfx yuxqoseedl</div>
 </body>
 </html>
