add code in files types: .html,.js remove code in files types: .js

--- a/content.html
+++ b/content.html
@@ -302,5 +302,6 @@
   <div>ceaojuleiy ojjfvwbeap gybcuukkad lpekymeles edpxehdxui</div>
   <div>vhkuxymxca ukpcystdnq dxytkmjtoo srxnmddfhb oqcnwghmvc</div>
   <div>msuampvcxr lwtqlmdksn nlayiwupxg kjdepwmgkj bkfhaoixos vfhbrhyjyr ykfhajyldt fhgsnxuuqb wtwxddldir htwfyrttve</div>
+  <div>kjbrbindbc cxrslhfnum</div>
 </body>
 </html>
