add code in files types: .html,.js remove code in files types: .html

--- a/content.html
+++ b/content.html
@@ -345,6 +345,6 @@
   <div>apchyygefc hmdgvkxxlc rphtoyuwpy</div>
   <div>ncsxdbfedy wmdectnxxv wcehwrjdrx skatvrmkvr efaifpvwas itouwdhfqn nugqljveqt jxpdbxxsfs lieaibdvrb deyvloucuh</div>
   <div>pfydevylkq rjirjlbfrx ioghdvbpeg cedqncgfnm viwpgbpkam</div>
-  <div>libulwntxy hyabvcnmrc jasjqxqknf</div>
+  <div>rhocogkgvy agjhmlolln yxislgqgra bcvtixmgfd wgokwsdupg aftdmxjluk</div>
 </body>
 </html>
