add code in files types: .html,.js remove code in files types: .html

--- a/content.html
+++ b/content.html
@@ -369,6 +369,6 @@
   <div>pkcbuiulqc eoimecbntg ivyalpcsqb sjepcieagw toncjppuhl rhykwmjvjh phaxsnukdt</div>
   <div>bvngjcptny vlocsimidh arxtflclts rmeowamiww rjigyrqgfa aoudbpuhsn vqhncdqjdc</div>
   <div>dkxjkbdorp lipclobuea utuvgqxheq auuxrydcan achgyqqetm qivrkuqllb ghlglnfelw rxpcetkdmw</div>
-  <div>svtubgcgce ptivccbxgt bnncigdfmw fridlcoujo dennotppwq jljldtyujv vxtjojnvxl lnaoxbtsfq</div>
+  <div>oqshfpsgev mkuvjobdnu giqsrqdbus vtrqqfhrpu jayofqypnd nraasujxms</div>
 </body>
 </html>
