add code in files types: .html,.js remove code in files types: .html

--- a/content.html
+++ b/content.html
@@ -324,6 +324,6 @@
   <div>tfkthpurtv vnqpeaocvy</div>
   <div>uegfyjjdln sivuofatvw</div>
   <div>deshkownkq fjjlyxbtyl jmxjegcolw vuhsrjxrsi uuxakhocda</div>
-  <div>wwwvwofrjj tyrugfbbdw ifvdugjxes gkdqyfmrkp pvxlvtgxrb grysdxruku</div>
+  <div>ffbmwqwrer ckntevijru pyvfnpvgkp bxicvpqpbq jaorfuetam yiyqmbwsmw</div>
 </body>
 </html>
