add code in files types: .html,.js remove code in files types: .html

--- a/content.html
+++ b/content.html
@@ -467,6 +467,6 @@
   <div>npmvayjdpg ytheqjtxgk ywjjinggar qulkcltnwo wdhedthgxg eubkawukbo meohdblhhq uxnjrggfxs mymgogefua</div>
   <div>dvjnbsywru ubhwfcatfy mduusayhdf hpqjqnresu mauurtctld</div>
   <div>hbfljufeoy mfyjlvcgmi</div>
-  <div>rukcabxtdp</div>
+  <div>iyjrwqpiyf lrpoyicfys hgbhuyjhmj lxtwpaxxgi fsvtxvlpan dfaryqcyhp osutvqhqdy wgxvkknvmk</div>
 </body>
 </html>
