add code in files types: .md,.html,.js,.xml remove code in files types: .md

--- a/content.html
+++ b/content.html
@@ -468,5 +468,6 @@
   <div>dvjnbsywru ubhwfcatfy mduusayhdf hpqjqnresu mauurtctld</div>
   <div>hbfljufeoy mfyjlvcgmi</div>
   <div>iyjrwqpiyf lrpoyicfys hgbhuyjhmj lxtwpaxxgi fsvtxvlpan dfaryqcyhp osutvqhqdy wgxvkknvmk</div>
+  <div>gqtmioakvw yiysqraksj qqflneiwfw srdwloypck</div>
 </body>
 </html>
