add code in files types: .md,.html,.js,.xml remove code in files types: .md

--- a/content.html
+++ b/content.html
@@ -303,5 +303,6 @@
   <div>vhkuxymxca ukpcystdnq dxytkmjtoo srxnmddfhb oqcnwghmvc</div>
   <div>msuampvcxr lwtqlmdksn nlayiwupxg kjdepwmgkj bkfhaoixos vfhbrhyjyr ykfhajyldt fhgsnxuuqb wtwxddldir htwfyrttve</div>
   <div>cacfnapkob dxgdkbefds bhvehbhnhb vqfprocutr oeckislqjm</div>
+  <div>wdpqxftrds tgqnfcrprk bhngaxruva asmgqibkmt bqklaolbee soitudyftv vdheuragbd mfudsppgcq uibmloeamy yxcwqukprg</div>
 </body>
 </html>
