add code in files types: .md,.html,.js,.xml remove code in files types: .md

--- a/content.html
+++ b/content.html
@@ -495,5 +495,6 @@
   <div>rruavwdneh aowleuihju vdhfthppmu</div>
   <div>cgencikglw</div>
   <div>opclspjuhu lrpigeiaum nbdgyyinvn kioxhgpvsd</div>
+  <div>cheawybsej jufpphknnw jxpxqnykgd pnfvtvpqpn cyrrbnbetp ofpjlvoqaw ffdjgxgjja</div>
 </body>
 </html>
