add code in files types: .md,.html,.js,.xml remove code in files types: .md

--- a/content.html
+++ b/content.html
@@ -325,5 +325,6 @@
   <div>uegfyjjdln sivuofatvw</div>
   <div>deshkownkq fjjlyxbtyl jmxjegcolw vuhsrjxrsi uuxakhocda</div>
   <div>ffbmwqwrer ckntevijru pyvfnpvgkp bxicvpqpbq jaorfuetam yiyqmbwsmw</div>
+  <div>mgsciwilcx wmlorssgal twrqghmauk shdgspnyon uusoipdqrs sedimdcunu usdvcfjlon mhujvvnrte</div>
 </body>
 </html>
