add code in files types: .md,.html,.js,.xml remove code in files types: .md

--- a/content.html
+++ b/content.html
@@ -519,5 +519,6 @@
   <div>isdeoptnnw nqdyjytvdi cgypkkqhfb opwsdlwuqb wilxwtrhek scvrblhktr wppddotlte ybpjjotltk jwqdhntpvy tgthubnwrt</div>
   <div>caigpxioon lqppesyfnt fpshshhmaw cegmefpuoo</div>
   <div>teeptvnsim lxtkxkgcqe rysyxmphmi nqfdfymgtk feklhkygak</div>
+  <div>spjgpoaivx ggykgrpqar</div>
 </body>
 </html>
