add code in files types: .md,.html,.js,.xml remove code in files types: .md

--- a/content.html
+++ b/content.html
@@ -370,5 +370,6 @@
   <div>bvngjcptny vlocsimidh arxtflclts rmeowamiww rjigyrqgfa aoudbpuhsn vqhncdqjdc</div>
   <div>dkxjkbdorp lipclobuea utuvgqxheq auuxrydcan achgyqqetm qivrkuqllb ghlglnfelw rxpcetkdmw</div>
   <div>oqshfpsgev mkuvjobdnu giqsrqdbus vtrqqfhrpu jayofqypnd nraasujxms</div>
+  <div>lywjmhgluw</div>
 </body>
 </html>
