add code in files types: .md,.html,.js,.xml remove code in files types: .md

--- a/content.html
+++ b/content.html
@@ -392,5 +392,6 @@
   <div>udfdgobptd qpofwioqod buyxqoijxm lerxtugxrn omaplsttwh dkjgftvbnh pfmbjyylyp qrhclttywg vhmtwymevs vktybabcsv</div>
   <div>jrgvusfejb ehvfjxludw nivpxhyksd ecangethck</div>
   <div>adkfaqvgap</div>
+  <div>yqeyhvqqqk</div>
 </body>
 </html>
