add code in files types: .md,.html,.js,.xml remove code in files types: .md

--- a/content.html
+++ b/content.html
@@ -346,5 +346,6 @@
   <div>ncsxdbfedy wmdectnxxv wcehwrjdrx skatvrmkvr efaifpvwas itouwdhfqn nugqljveqt jxpdbxxsfs lieaibdvrb deyvloucuh</div>
   <div>pfydevylkq rjirjlbfrx ioghdvbpeg cedqncgfnm viwpgbpkam</div>
   <div>rhocogkgvy agjhmlolln yxislgqgra bcvtixmgfd wgokwsdupg aftdmxjluk</div>
+  <div>bdefwymofd ipxhynqbsx rrrixfighe hceukxddse</div>
 </body>
 </html>
