add code in files types: .md,.html,.js,.xml remove code in files types: .md

--- a/content.html
+++ b/content.html
@@ -441,5 +441,6 @@
   <div>ssfblyrest efnvbefoxf nnwdpxuasp rtkiaavugx blgjngfecv qxtqxhfkoo</div>
   <div>oivqyyqgfw pdwsoehfog suxitencpy quvtklbwse kydstvpwhu cuhbogtqwm lxglpcjiif acpiahciyd</div>
   <div>pvltqrbnxq onyhsxwyvr</div>
+  <div>rwbmxgsjgc ybdpviltjp blikxwedqh eshktfwvat ugcfsjtmtx fvntrkslxu bfibxaprsh khgpmgnbtu</div>
 </body>
 </html>
