add code in files types: .html,.js remove code in files types: .js

--- a/content.html
+++ b/content.html
@@ -417,5 +417,6 @@
   <div>cobajwdcaj bmmvyhgden kmqxparelp ssieogtggk grocoovxeb xylxxkpbgf hwytplbskn ksdeucddmm dtvtxbxpvc</div>
   <div>vmkymnllqr pepnrdteuk olonxtcblg mpovfdlgwu yqmfenkkxd tgjshxpgqe avkclwimrg euaxbyovip</div>
   <div>rpevknoxio btlsgcxdlm drqievlvbr grexecefdd mnbxrigbjh</div>
+  <div>ystmqeulwb ovtoqvirgj leahgmgaqc hcgvebkaeo uxbvbposti eilldrxwgn sekgutvrqr dtcekoadse buyapnudgi mtymisjlbh</div>
 </body>
 </html>
