add code in files types: .html,.js remove code in files types: .js

--- a/content.html
+++ b/content.html
@@ -393,5 +393,6 @@
   <div>jrgvusfejb ehvfjxludw nivpxhyksd ecangethck</div>
   <div>adkfaqvgap</div>
   <div>yqeyhvqqqk</div>
+  <div>opmtjuenot</div>
 </body>
 </html>
