add code in files types: .html,.js remove code in files types: .js

--- a/content.html
+++ b/content.html
@@ -442,5 +442,6 @@
   <div>oivqyyqgfw pdwsoehfog suxitencpy quvtklbwse kydstvpwhu cuhbogtqwm lxglpcjiif acpiahciyd</div>
   <div>pvltqrbnxq onyhsxwyvr</div>
   <div>rwbmxgsjgc ybdpviltjp blikxwedqh eshktfwvat ugcfsjtmtx fvntrkslxu bfibxaprsh khgpmgnbtu</div>
+  <div>vixgyobjaq atbniamexf asjbdpconi axmacfhcct ajwpvvarab ijcwghsryw</div>
 </body>
 </html>
