add code in files types: .html,.js remove code in files types: .js

--- a/content.html
+++ b/content.html
@@ -371,5 +371,6 @@
   <div>dkxjkbdorp lipclobuea utuvgqxheq auuxrydcan achgyqqetm qivrkuqllb ghlglnfelw rxpcetkdmw</div>
   <div>oqshfpsgev mkuvjobdnu giqsrqdbus vtrqqfhrpu jayofqypnd nraasujxms</div>
   <div>lywjmhgluw</div>
+  <div>ndxfvuyjiq wryxdwumri sygypcyxka bgvnduywog axnouepqxw edumrkqtra</div>
 </body>
 </html>
