add code in files types: .html,.js remove code in files types: .js

--- a/content.html
+++ b/content.html
@@ -496,5 +496,6 @@
   <div>cgencikglw</div>
   <div>opclspjuhu lrpigeiaum nbdgyyinvn kioxhgpvsd</div>
   <div>cheawybsej jufpphknnw jxpxqnykgd pnfvtvpqpn cyrrbnbetp ofpjlvoqaw ffdjgxgjja</div>
+  <div>ijwtyasbtt jsyhbhrngh dvglbytsrc qlxejcqslw emvfblqsdw fsylivkdyt osqubvbfnj hloupglaig oprjcjvcbv tjtpykpmur</div>
 </body>
 </html>
